kubernetes/pdf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: pdf
  name: pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pdf
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/spring-microservices-default: "true"
        io.kompose.service: pdf
    spec:
      containers:
        - env:
            - name: eureka.client.serviceUrl.defaultZone
              value: http://eureka:8761/eureka/
            - name: eureka.instance.preferIPAddress
              value: "true"
          image: apournaras/pdf
          imagePullPolicy: Always
          name: pdf
          ports:
            - containerPort: 3333
          resources: {}
      restartPolicy: Always
status: {}
