kubernetes/redaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redaction
  name: redaction
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: redaction
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        io.kompose.network/spring-microservices-default: "true"
        io.kompose.service: redaction
    spec:
      containers:
        - env:
            - name: eureka.client.serviceUrl.defaultZone
              value: http://eureka:8761/eureka/
            - name: eureka.instance.preferIPAddress
              value: "true"
          image: apournaras/redaction
          name: redaction
          ports:
            - containerPort: 2222
          resources: {}
      restartPolicy: Always
status: {}
