kubernetes/pdf-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pdf
  name: pdf
spec:
  type: LoadBalancer
  ports:
    - name: "3333"
      port: 3333
      targetPort: 3333
  selector:
    io.kompose.service: pdf
status:
  loadBalancer: {}
