kubernetes/redaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redaction
  name: redaction
spec:
  type: LoadBalancer
  ports:
    - name: "2222"
      port: 2222
      targetPort: 2222
  selector:
    io.kompose.service: redaction
status:
  loadBalancer: {}
