kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: web
  name: web
spec:
  type: LoadBalancer
  ports:
    - name: "4444"
      port: 4444
      targetPort: 4444
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
